# secure-executor-api

./: README.md  config.yaml  main.py  pyproject.toml
src/secure_executor_api/: __init__.py  gateway.py
tests/: test_gateway.py
